更新访客图片源

--- a/index.html
+++ b/index.html
@@ -155,32 +155,33 @@
 			<p class="visit-description">With the rapid development of the company and the continuous innovation of research and development technology, Longda Jiaye is also expanding the international market. Foreign customers have investigated the company's strength, product production process, and understood the company's strength, development planning and product sales.</p>
 			<p class="visit-description">Excellent technology and service can be recognized by customers. Good products and good services are the most powerful marketing tools.</p>
 			<div id="visit" class="inner_sec_info_agile_w3_info">
-				<div class="top-line">
-					<div class="flex1 visit-grid">
-						<a title="100% Satisfaction." href="https://pic.imgdb.cn/item/656b5cdac458853aef0cd413.jpg">
-							<img src="https://pic.imgdb.cn/item/656b5cdac458853aef0cd413.jpg" class="img-responsive" alt="">
-						</a>
-					</div>
-					<div class="flex1 visit-grid">
-						<a title="100% Satisfaction." href="https://pic.imgdb.cn/item/656b5cdac458853aef0cd3b6.jpg">
-							<img src="https://pic.imgdb.cn/item/656b5cdac458853aef0cd3b6.jpg" class="img-responsive" alt="">
-						</a>
-					</div>
-				</div>
+				
 				<div class="end-line">
+					<div class="flex2 visit-grid">
+						<a class="visit-grid-box" href="https://pic1.imgdb.cn/item/68e8b7b7c5157e1a88622f89.jpg">
+							<img src="https://pic1.imgdb.cn/item/68e8b7b7c5157e1a88622f89.jpg" class="img-responsive" alt="">
+						</a>
+					</div>
 					<div class="flex1 visit-grid">
-						<a title="100% Satisfaction." href="https://pic.imgdb.cn/item/656b515cc458853aefcd8349.jpg">
-							<img src="https://pic.imgdb.cn/item/656b515cc458853aefcd8349.jpg" class="img-responsive" alt="">
+						<a class="visit-grid-box" href="https://pic1.imgdb.cn/item/68e8ae34c5157e1a88620f01.jpg">
+							<img src="https://pic1.imgdb.cn/item/68e8ae34c5157e1a88620f01.jpg" class="img-responsive" alt="">
 						</a>
 					</div>
 					<div class="flex2 visit-grid">
-						<a title="100% Satisfaction." href="https://pic.imgdb.cn/item/656b5d28c458853aef0e5229.jpg">
-							<img src="https://pic.imgdb.cn/item/656b5d28c458853aef0e5229.jpg" class="img-responsive" alt="">
+						<a class="visit-grid-box" href="https://pic1.imgdb.cn/item/68e8ade0c5157e1a88620e41.jpg">
+							<img src="https://pic1.imgdb.cn/item/68e8ade0c5157e1a88620e41.jpg" class="img-responsive" alt="">
 						</a>
 					</div>
-					<div class="flex1 visit-grid">
-						<a title="100% Satisfaction." href="https://pic.imgdb.cn/item/656b515cc458853aefcd826a.jpg">
-							<img src="https://pic.imgdb.cn/item/656b515cc458853aefcd826a.jpg" class="img-responsive" alt="">
+				</div>
+				<div class="top-line">
+					<div class="flex2 visit-grid">
+						<a class="visit-grid-box" href="https://pic1.imgdb.cn/item/68e8ae60c5157e1a88620f64.jpg">
+							<img src="https://pic1.imgdb.cn/item/68e8ae60c5157e1a88620f64.jpg" class="img-responsive" alt="">
+						</a>
+					</div>
+					<div class="flex2 visit-grid">
+						<a class="visit-grid-box" href="https://pic1.imgdb.cn/item/68e8b0f0c5157e1a886212cd.jpg">
+							<img src="https://pic1.imgdb.cn/item/68e8b0f0c5157e1a886212cd.jpg" class="img-responsive" alt="">
 						</a>
 					</div>
 				</div>
@@ -494,7 +495,7 @@
 			let sectionDom = pictures.map(p => {
 				s += `
 				<div class="col-lg-3 col-md-4 col-sm-4 col-xs-6 gal-sec gallery-grid1">
-					<a class="gal-inner gal-holder" title="100% Satisfaction." href="${p.src}">
+					<a class="gal-inner gal-holder" title="" href="${p.src}">
 						<img src="${p.src}" alt=" " class="img-product img-responsive" />
 						<div class="p-mask">
 							<h4>${p.title || ''}</h4>
