--- a/index.html
+++ b/index.html
@@ -87,14 +87,10 @@
 	<div class="banner_top">
 		<div id="myCarousel" class="carousel slide" data-ride="carousel">
 			<!-- Indicators -->
-			<ol class="carousel-indicators">
+			<ol id="bannersIndicators" class="carousel-indicators">
 				<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-				<li data-target="#myCarousel" data-slide-to="1"></li>
- 				<!-- <li data-target="#myCarousel" data-slide-to="2"></li> -->
-				<!-- <li data-target="#myCarousel" data-slide-to="3"></li> -->
 			</ol>
-			<div id="banners" class="carousel-inner" role="listbox">
-			</div>
+			<div id="banners" class="carousel-inner" role="listbox"></div>
 			<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
 				<span class="fa fa-chevron-left" aria-hidden="true"></span>
 				<span class="sr-only">Previous</span>
@@ -374,7 +370,11 @@
 				</div>
 			</div>`
 		})
+		const indicators = bannersDto.map( (i, index)=> {
+			return `<li data-target="#myCarousel" data-slide-to="${index}" class="${ index ? '' : 'active'}"></li>`
+		})
 		document.getElementById('banners').innerHTML = banners.join('')
+		document.getElementById('bannersIndicators').innerHTML = indicators.join('')
 	</script>
 
 	<script>
